# llm_experiments

./: .gitignore  LICENSE  README.md  opencode.json
agentic-red-team/: config.py  main.py  pyproject.toml
agentic-red-team/agent/: callbacks.py  llm.py  models.py  prompts.py  report.py  workflow.py
agentic-red-team/kali-api/: Dockerfile  docker-compose.yml  pyproject.toml
agentic-red-team/kali-mcp/: Dockerfile  docker-compose.yml  pyproject.toml
agentic-red-team/reports/: 192_168_50_70_20260411_011426.html  192_168_50_70_20260412_010232.html  192_168_50_70_20260413_083204.html  gemma4:26b.md
agentic-red-team/template/: report.html
incidentNotebook/: .env.template  .gitignore  GEMINI.md  README.md  app.py  logging_config.py  pyproject.toml  redesigned_app.py  start_app.sh  test_state.json  test_workflow.py
incidentNotebook/backend/: main.py  models.py
incidentNotebook/cases/: case_01.txt  case_02.txt  case_03.txt  case_04.txt  case_05.txt  case_06.txt  case_07.txt  case_08.txt  case_09.txt  case_10.txt  case_11.txt  case_12.txt  case_13.txt  case_14.txt  case_15.txt  case_16.txt  case_17.txt  case_18.txt  case_19.txt  case_20.txt
incidentNotebook/db/: incident_notebook.db  schema.py
incidentNotebook/frontend/: app.py  package-lock.json  package.json  tailwind.config.ts
incidentNotebook/frontend-next/: package-lock.json  package.json
incidentNotebook/plans/: 01-manual-ioc-timeline-editing.md  02-async-extraction-jobs.md  03-case-report-export.md  04-ioc-export-formats.md  05-ioc-enrichment.md  06-cross-case-correlation.md  07-mitre-attack-mapping.md  08-evidence-file-attachments.md  09-global-search-filtering.md  10-ioc-validation-defang.md  11-pydantic-ai-openai-migration.md  README.md
incidentNotebook/reference/: pydantic_ai_reference.md
incidentNotebook/test_results/: test-01-qwen3_30b.json  test-02-gemma3_27b.json  test-03-gemma3_27b.json  test-03-llama3.1_8b.json  test-04-gemma3_27b.json  test-04-llama3.1_8b.json  test-05-qwen3_30b.json  test-06-gemma3_27b.json  test-06-llama3.1_8b.json  test-08-llama3.1_8b.json  test-09-gemma3_27b.json  test-10-llama3.1_8b.json  test-10-qwen3_30b.json  test-11-llama3.1_8b.json  test-12-gemma3_27b.json  test-12-qwen3_30b.json  test-13-gemma3_27b.json  test-13-llama3.1_8b.json  test-13-qwen3_30b.json  test-14-gemma3_27b.json  test-18-gemma3_27b.json  test-18-llama3.1_8b.json  test-19-qwen3_30b.json  test-20-gemma3_27b.json  test-20-qwen3_30b.json
incidentNotebook/tests/: test_api_refactor.py  test_api_script.py  (+3 more)
(+112 files in other folders)
