[project]
name = "agentic-red-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.12",
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.0.1",
    "pydantic-settings>=2.13.1",
]

