[project]
name = "agentic-red-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.12",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "langchain>=1.2.13",
    "langchain-ollama>=1.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

