[project]
name = "incidentnotebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.41",
    "python-json-logger>=2.0.7",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.2.0",
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "requests>=2.32.5",
    "langgraph>=0.2.0",
    "pydantic-ai-slim[openai]>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Live-server / live-LLM manual scripts — run directly, not via pytest.
addopts = [
    "--ignore=tests/test_api_refactor.py",
    "--ignore=tests/test_workflow.py",
]
